...
    );
  }, [cancelWorkoutSession]);

  return (
    <View
      style={[styles.container, { backgroundColor: themeColors.background }]}
      testID="active-workout-screen"
      accessibilityLabel="active-workout-screen">

      {/* Header */}
      <View style={styles.header}>
        <LinearGradient
          colors={[themeColors.surfaceRaised, themeColors.surface]}
...
